[package]
name = "taskcrab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
fastrand = "2.0.2"
terminal_size = "0.3"
colored = "2.1"
tabled = "0.15.0"
chrono = "0.4"
# tokio = { version = "1", features = ["full"] }
# sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
